--- a/config-as-code/environments/egov-demo.yaml
+++ b/config-as-code/environments/egov-demo.yaml
@@ -185,18 +185,18 @@ egov-idgen:
   autocreate-new-seq: "true"
 
 egov-notification-sms:
-  sms-provider-url: "http://smsp.myoperator.co/" ## Add sms provider url
+  sms-provider-url: "https://msdgweb.mgov.gov.in/esms/sendsmsrequest" ## Add sms provider url
   sms.provider.class: "Generic"
   sms.provider.contentType:  "application/x-www-form-urlencoded"
   sms-config-map: "{'User':'$username', 'passwd': '$password', 'sid':'$senderid', 'mobilenumber':'$mobileno', 'message':'$message', 'mtype':'N', 'DR':'N', 'smsservicetype':'singlemsg'}"
   sms-gateway-to-use: "sms provider name" ## Add sms provider name
-  sms-sender: "KUTKIT" ## Add sms sender
+  sms-sender: "MCGMTA" ## Add sms sender
   sms-sender-requesttype: "GET"
   sms-custom-config: "true"
   sms-extra-req-params: "mtype=N&DR=Y"
   sms-sender-req-param-name: "sid"
-  sms-sender-username-req-param-name: "tattva"
-  sms-sender-password-req-param-name: "admin123"
+  sms-sender-username-req-param-name: "MCGMSEVA-UPYOG"
+  sms-sender-password-req-param-name: "Tattva@2023#$"
   sms-destination-mobile-req-param-name: "mobilenumber"
   sms-message-req-param-name: "message"
   sms-error-codes: "401,403,404,405,406,407,408,409,410,411,412,413,414"
